--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   intl: any
   get_it: ^7.7.0
   flutter_bloc: ^8.1.6
+  either_dart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -30,3 +31,8 @@ flutter:
   generate: true
 
   uses-material-design: true
+
+  assets:
+    - data/apex_unit/
+    - data/jaguar_unit/
+    - data/tobias_unit/
